fix: Graph resize handle doesn't work when it overlaps attribute name (CODAP-926)
[CODAP-926](https://concord-consortium.atlassian.net/browse/CODAP-926)

--- a/v3/src/components/graph/components/graph.scss
+++ b/v3/src/components/graph/components/graph.scss
@@ -1,8 +1,12 @@
 @use "../../vars";
 
-.codap-component.codap-graph.minimized {
-  .graph-plot {
-    visibility: hidden;
+.codap-component.codap-graph {
+  z-index: 0;
+
+  &.minimized {
+    .graph-plot {
+      visibility: hidden;
+    }
   }
 }
 
